--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@klick-app/utils",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist-types/index.d.ts",
@@ -38,5 +38,9 @@
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.17.0"
-  }
+  },
+  "files": [
+    "dist",
+    "dist-types"
+  ]
 }
